# Jagati

./: .gitignore  .travis.yml  CMakeLists.txt  Jagati.cmake  JagatiIndex.cmake  Jenkinsfile  README.md  RefreshSha512.sh  SHA512SUM.txt  appveyor.yml
Test/: CMake.rb  CMakeCache.rb  CMakeJagati.rb  CMakeTargets.rb  CopyForTesting.sh  RootTest.rb  WorkArounds.rb
Test/ClaimParentProject/: test.rb
Test/ClaimParentProject/Ours/: CMakeLists.txt
Test/ClaimParentProject/Single/: CMakeLists.txt
Test/ClaimParentProject_Parent/: CMakeLists.txt  test.rb
Test/ClaimParentProject_Single/: CMakeLists.txt  test.rb
Test/ConfigFile/: CMakeLists.txt  test.rb
Test/Coverage/: test.rb
Test/Coverage/ExplicitOff/: CMakeLists.txt
Test/Coverage/ExplicitOn/: CMakeLists.txt
Test/Coverage/NotSet/: CMakeLists.txt
Test/Coverage_ExplicitOff/: CMakeLists.txt  test.rb
Test/Coverage_ExplicitOff/src/: hello.cpp
Test/Coverage_ExplicitOn/: CMakeLists.txt  test.rb
Test/Coverage_NotSet/: CMakeLists.txt  test.rb
Test/DoubleDependency/: CMakeLists.txt  test.rb
Test/DoubleDependency/dox/: HelloDoc.h
Test/DoubleDependency/include/: Hello.h  Hello2.h
Test/DoubleDependency/src/: Hello.cpp  Hello2.cpp  Main.cpp
Test/DoubleDependency/test/: HelloTest.h
Test/Exceptions/: CMakeLists.txt  test.rb
Test/Exceptions/dox/: HelloDoc.h
Test/Exceptions/include/: Hello.h
Test/Exceptions/src/: Hello.cpp  Main.cpp
Test/Exceptions/swig/: HelloSwig.h
Test/Exceptions/test/: HelloTest.h
Test/FileLists/: CMakeLists.txt  test.rb
Test/FileLists/include/: Hello.h  Hello2.h
Test/FileLists/src/: Hello2.cpp  Main.cpp
Test/FileLists/swig/: HelloSwig.h
Test/FileLists/test/: HelloTest.h
Test/FileLists_BadDoxMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadDoxRoot/: CMakeLists.txt  test.rb
Test/FileLists_BadHeaderMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadHeaderRoot/: CMakeLists.txt  test.rb
Test/FileLists_BadMainSrcMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadMainSrcRoot/: CMakeLists.txt  test.rb
Test/FileLists_BadSourceMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadSourceRoot/: CMakeLists.txt  test.rb
Test/FileLists_BadSwigMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadSwigRoot/: CMakeLists.txt  test.rb
Test/FileLists_BadTestMissing/: CMakeLists.txt  test.rb
Test/FileLists_BadTestRoot/: CMakeLists.txt  test.rb
Test/Identify/: CMakeLists.txt  test.rb
Test/Libraries/: test.rb
Test/Libraries/Dynamic/: CMakeLists.txt
Test/Libraries/Static/: CMakeLists.txt
Test/Libraries_Dynamic/: CMakeLists.txt  test.rb
Test/Libraries_Dynamic/src/: foo.cpp
Test/Libraries_Static/: CMakeLists.txt  test.rb
Test/LocationVars/: CMakeLists.txt  test.rb
Test/Mezz_PackageDirectory/: CMakeLists.txt  test.rb
Test/TestingTools/: CMake.rb  CMakeCache.rb  CMakeJagati.rb  CMakeOutput.rb  CMakeTargets.rb  JagatTestCase.rb  WorkArounds.rb
binaries/windows/: versions.txt
input/: autodetect.h.in
src/: action.cpp  action.h  binarybuffer.cpp  binarybuffer.h  datatypes.cpp  datatypes.h  dependency.cpp  dependency.h  externalcommand.cpp  externalcommand.h  githubmezzaninepackage.cpp  githubmezzaninepackage.h  indexer.h  insourcebinarypackage.cpp  insourcebinarypackage.h  main.cpp  main.h  menu.cpp  menu.h  package.cpp  package.h  resourceutilities.cpp  resourceutilities.h  stringtool.cpp  stringtool.h  tests.cpp  tests.h  version.cpp  version.h
src/actions/: exitaction.cpp  exitaction.h  menuaction.cpp  menuaction.h  noaction.cpp  noaction.h  packageinstallaction.cpp  packageinstallaction.h  packagerootaction.cpp  packagerootaction.h  packageviewaction.cpp  packageviewaction.h  viewpackage.cpp  viewpackage.h
